--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ META.yml
 MYMETA.yml
 nytprof.out
 pm_to_blib
+
+MYMETA.json
+debian/files
+debian/libdr-pager-perl.debhelper.log
+debian/libdr-pager-perl.substvars
+debian/libdr-pager-perl/
